# full_stack_multi_agent_app

./: .gitignore  README.md  compose.yaml
.github/workflows/: main.yml
app/: .pre-commit-config.yaml  Dockerfile  README.md  mypy.ini  pyproject.toml
app/migrations/: env.py
app/migrations/versions/: 7b7cc2e56735_initial_migration.py  86ca1bf63792_initial_migration.py
app/src/: alembic.ini  run.py
app/src/app/: __init__.py  extensions.py
app/src/app/core/: __init__.py  logger.py  routes.py
app/src/app/multiagent/: agentrunnables.py  agentstates.py  customagents.py  customchains.py  customtools.py  llm.py  prompts.py  routes.py
app/src/app/user/: models.py  routes.py
app/src/migrations/: env.py
app/tests/: __init__.py
app/tests/core/: test_core.py
client/: Dockerfile  package.json  pnpm-lock.yaml
client/src/: App.test.tsx  App.tsx
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/chat/: page.tsx
client/src/app/components/: Chat.tsx  Login.tsx  Signup.tsx
